# threadpool-c

./: .gitignore  CMakeLists.txt  adapter.h  adaptive_tpool.c  adaptive_tpool.h  benchmark.c  clear_buffer.sh  generate_files.sh  main.c  run_benchmarks.py  simple_tpool.h  test.c
benchmark_results/: result-200x100kb.json  result-200x100kb2.json
benchmarking/: benchmarks.json  get_child_tids.sh  raw_results_to_json.py  run_benchmark_traced.py  run_benchmarks.py  single_run_with_metrics.sh
benchmarking/analysis/: analysis.py  generic_data.py  generic_graphs.py
benchmarking/run-static-load-write-2020-11-19-10:40/: result-all-static-load-write.json  t=1-pidstats.txt  t=1-syscalls.txt  t=2-pidstats.txt  t=2-syscalls.txt  t=3-pidstats.txt  t=3-syscalls.txt  t=4-pidstats.txt  t=4-syscalls.txt  t=5-pidstats.txt  t=5-syscalls.txt  t=6-pidstats.txt  t=6-syscalls.txt  t=7-pidstats.txt  t=7-syscalls.txt  t=8-pidstats.txt  t=8-syscalls.txt
dynamic_adapter/: CMakeLists.txt  adapter.h  adaptive_tpool.c  adaptive_tpool.h  test.c
dynamic_demand/: CMakeLists.txt  spinlock_tpool.c  spinlock_tpool.h  test.c
dynamic_proc/: CMakeLists.txt  dyn_tpool.c  dyn_tpool.h  task_stats.c  task_stats.h  test.c
dynamic_traceset/: CMakeLists.txt  adaptive_tpool.c  adaptive_tpool.h  debug_macro.h  scaling.c  scaling.h  spinlock.h  spinlock_tpool.c  spinlock_tpool.h  test.c
dynamic_traceset/lib_traceset/: CMakeLists.txt  (+2 more)
simple_static/: simple_tpool.c  test.c
static_mutex/: CMakeLists.txt  simple_tpool.c
static_spinlock/: CMakeLists.txt  spinlock_tpool.c  spinlock_tpool.h  test.c
(+39 files in other folders)
