cmake_minimum_required(VERSION 3.15)
project(threadpool C)
set(CMAKE_C_STANDARD 11)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)

add_subdirectory(static_spinlock)
add_subdirectory(static_mutex)
add_subdirectory(dynamic_proc)
add_subdirectory(dynamic_demand)
add_subdirectory(dynamic_traceset)
